# CAMalyzer

./: CAMalyzer.py  README.md
CAMalyzer/: CMakeLists.txt
CAMalyzer/CAMalyzer/: CAMalyzer.py  CMakeLists.txt
CAMalyzer/CAMalyzer/Lib/camalyzer_core/: __init__.py  config.py  deps.py  inference.py  io.py  params.py  profiling.py  vtkconv.py
CAMalyzer/CAMalyzer/Lib/camalyzer_core/post/: __init__.py  cluster.py  poisson.py  surface.py
CAMalyzer/CAMalyzer/Resources/UI/: CAMalyzer.ui
CAMalyzer/CAMalyzer/UI/: CAMalyzer.ui
CAMalyzer/CAMalyzer/tests/: test_inference.py  test_integration_slicer.py  test_post.py
camalyzer_core/: __init__.py  config.py  deps.py  inference.py  io.py  params.py  profiling.py  vtkconv.py
camalyzer_core/post/: __init__.py  cluster.py  poisson.py  surface.py
tests/: test_inference.py  test_integration_slicer.py  test_post.py
